[package]
authors = ["EFanZh <efanzh@gmail.com>"]
categories = ["command-line-utilities"]
description = "Run a command repeatedly until it exits successfully."
edition = "2021"
keywords = ["utility"]
license = "MIT"
name = "keep-trying"
readme = "README.md"
repository = "https://github.com/EFanZh/keep-trying"
version = "0.1.2"

[dependencies]
shell-escape = "0.1"
